--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </p>
   </div>
   <div class="container cta navbar-fixed-bottom ">
-    <a class="text-center">
+    <a href="#" class="text-center">
         <p class="find"id="find">Find Your Future...</p>
         <p class="future"id="future">HERE </p>
     </a>
