--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
   </head>
   <body >
 <div class="body-wrapper">
-  <h1>This is the future of business things. </h1>
+  <h1>Web Design hand coded by John Lucy. </h1>
   <div class="container content">
-    <p class="text-center">
-    Paragraph with all the content that will be here.  I don't know, maybe sell something or remind people "holy gaucamole!, my brand is swell!"
-    </p>
-  </div>
+    <p id ="content"class="text-center">
+Web design can be more than just dragging your content into a pre-made box.  </div>
   <div class="container cta navbar-fixed-bottom ">
     <a href="#" class="text-center">
-        <p class="find"id="find">Find Your Future...</p>
-        <p class="future"id="future">HERE </p>
+        <p class="find"id="find">When your work is your passion, it becomes</p>
+        <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
   <!--  footer section of page with social icons-->
