--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body >
 <div class="body-wrapper">
-  <h1>Web Design hand coded by John Lucy. </h1>
+  <h1>Web Design hand coded by John Lucy </h1>
   <div class="container content">
     <p id ="content"class="text-center">
 Web design can be more than just dragging your content into a pre-made box.  </div>
