--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ Web design can be more than just dragging your content into a pre-made box.  </d
   <div class="container foot-wrapper navbar-fixed-bottom">
     <ul id="social-buttons"class="list-unstyled list-inline text-center">
     <li>
-    <a href="#" ><img src="C:\Users\John\Documents\GitHub\email-template\assets\img\FB-circle.png" ></img></a></li>
+    <a href="#" ><img src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\FB-circle.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="C:\Users\John\Documents\GitHub\email-template\assets\img\TWT-circle.png" ></img></a></li>
+    <a href="#" ><img src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\TWT-circle.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="C:\Users\John\Documents\GitHub\email-template\assets\img\YT-circle.png" ></img></a></li>
+    <a href="#" ><img src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\YT-circle.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="C:\Users\John\Documents\GitHub\email-template\assets\img\IG-circle.png" ></img></a></li>
+    <a href="#" ><img src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\IG-circle.png" ></img></a></li>
   </ul>
 </div>
 <!-- video embed... all controls are here and not displayed  -->
