--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <h1>Web Design hand coded by John Lucy </h1>
   <div class="container content">
     <p id ="content"class="text-center">
-Web design can be more than just dragging your content into a pre-made box.  </div>
+Web design should be more thoughtful than filling out a template.  </div>
   <div class="container cta navbar-fixed-bottom ">
     <a href="#" class="text-center">
-        <p class="find"id="find">When your work is your passion, it becomes</p>
+        <p class="find"id="find">When design is your work, it is truly</p>
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
