social links added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link rel="icon" href="#">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,13 +37,13 @@ Web design should be more thoughtful than filling out a template.  </div>
   <div class="container foot-wrapper navbar-fixed-bottom">
     <ul id="social-buttons"class="list-unstyled list-inline text-center">
     <li>
-    <a href="#" ><img src="assets\img\FB-circle.png" ></img></a></li>
+    <a href="https://www.facebook.com/john.lucy.11" ><img src="assets\img\facebook.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="assets\img\IG-circle.png" ></img></a></li>
+    <a href="https://twitter.com/JucyDev" ><img src="assets\img\twitter.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="assets\img\TWT-circle.png" ></img></a></li>
+    <a href="https://github.com/gitJucy" ><img src="assets\img\github.png" ></img></a></li>
     <li>
-    <a href="#" ><img src="assets\img\YT-circle.png" ></img></a></li>
+    <a href="https://www.linkedin.com/in/john-lucy-823893126/" ><img src="assets\img\linkedin.png" ></img></a></li>
   </ul>
 </div>
 <!-- video embed... all controls are here and not displayed  -->
