--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Web design should be more thoughtful than filling out a template.  </div>
     <li>
     <a href="https://twitter.com/JucyDev" ><img src="assets\img\twitter.png" ></img></a></li>
     <li>
-    <a href="https://github.com/gitJucy" ><img src="assets\img\github.png" ></img></a></li>
+    <a href="https://github.com/gitJucy" ><img src="assets\img\Github.png" ></img></a></li>
     <li>
     <a href="https://www.linkedin.com/in/john-lucy-823893126/" ><img src="assets\img\linkedin.png" ></img></a></li>
   </ul>
