cleaned up the rough bits

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta author="gitJucy @ github.com/gitJucy" >
-    <title>full screen one page landing</title>
+    <title>full screen one page video landing</title>
 
     <!-- Bootstrap -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,13 +23,15 @@
   </head>
   <body >
 <div class="body-wrapper">
-  <h1>Web Design hand coded by John Lucy </h1>
-  <div class="container content">
-    <p id ="content"class="text-center">
-Web design should be more thoughtful than filling out a template.  </div>
+  <h1> John Lucy </h1>
+  <div class="container sub-head">
+    <p id ="content"class=" text-center">
+      100% organic UI/UX.
+      <br /></p>
+  </div>
   <div class="container cta navbar-fixed-bottom ">
     <a href="#" class="text-center">
-        <p class="find"id="find">When design is your work, it is truly</p>
+        <p class="find"id="find">code + design</p>
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
@@ -53,7 +55,10 @@ Web design should be more thoughtful than filling out a template.  </div>
       <source src="assets/img/back-loop.mp4" type="video/webm" />
       Sorry, the video can't be played on this browser!
     </video>
-
+    <!--  copyright info-->
+      <p class="copy text-right">
+      &copy 2017 John Lucy
+      </p>
 </div><!--end of body wrappper-->
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
