--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta author="gitJucy @ github.com/gitJucy" >
-    <title>full screen one page video landing</title>
+    <title>John Lucy: Web Dev</title>
 
     <!-- Bootstrap -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/img/designicon.png">
+    <link rel="icon" type="image/png" href="assets/img/codicon.png">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,11 +40,11 @@
   <div class="container foot-wrapper navbar-fixed-bottom">
     <ul id="social-buttons"class="list-unstyled list-inline text-center">
       <li>
-        <a href="https://twitter.com/JucyDev" ><img src="assets\img\twitter.png" ></img></a></li>
+        <a href="https://twitter.com/JucyDev" ><i class="fa fa-twitter" aria-hidden="true"style="font-size:3em"></i></a></li>
       <li>
-        <a href="https://github.com/gitJucy" ><img src="assets\img\Github.png" ></img></a></li>
+        <a href="https://github.com/gitJucy" ><i class="fa fa-github" aria-hidden="true"style="font-size:3em"></i></a></li>
       <li>
-        <a href="https://www.linkedin.com/in/john-lucy-823893126/" ><img src="assets\img\linkedin.png" ></img></a></li>
+        <a href="https://www.linkedin.com/in/john-lucy-823893126/" ><i class="fa fa-linkedin" aria-hidden="true"style="font-size:3em"></i></a></li>
       </ul>
   </div>
 <!-- video embed... all controls are here and not displayed  -->
