more work on gallery

--- a/index.html
+++ b/index.html
@@ -39,10 +39,25 @@
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
-</div class="container gallery-box">
-  <ul id="image-list">
-    <a href="portfolio-pictures\diehl-main.PNG" data-lightbox="diehl-site" </a>
-
+<div class="container gallery-box">
+  <ul id="image-list"class="list-unstyled">
+    <div class ="row">
+      <li class="col-sm-3"><img src="portfolio-pictures\diehl-main.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\diehl-about.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\diehl-login.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\portfolio.PNG" data-lightbox="portfolio" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+    </div>
+    <div class="row">
+      <li class="col-sm-3"><img src="portfolio-pictures\quick-email-design.PNG" data-lightbox="e-mail" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-iphone5.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-iphone6plus.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-landscape-searchbar.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+    </div>
+    <div class="row">
+      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-responsive-small.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\web-artist-jquery-scroll.PNG" data-lightbox="web-art" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+      <li class="col-sm-3"><img src="portfolio-pictures\web-artist-landing.PNG" data-lightbox="web-art" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
+    </div>
   </ul><!--end of image-list-->
 </div><!--end of gallery-box-->
   <!--  footer section of page with social icons-->
