build slider size and begin jquery

--- a/index.html
+++ b/index.html
@@ -39,27 +39,21 @@
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
-<div class="container gallery-box">
-  <ul id="image-list"class="list-unstyled">
-    <div class ="row">
-      <li class="col-sm-3"><img src="portfolio-pictures\diehl-main.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\diehl-about.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\diehl-login.PNG" data-lightbox="diehl-site" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\portfolio.PNG" data-lightbox="portfolio" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-    </div>
-    <div class="row">
-      <li class="col-sm-3"><img src="portfolio-pictures\quick-email-design.PNG" data-lightbox="e-mail" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-iphone5.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-iphone6plus.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-landscape-searchbar.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-    </div>
-    <div class="row">
-      <li class="col-sm-3"><img src="portfolio-pictures\simple-list-responsive-small.PNG" data-lightbox="simple-list" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\web-artist-jquery-scroll.PNG" data-lightbox="web-art" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-      <li class="col-sm-3"><img src="portfolio-pictures\web-artist-landing.PNG" data-lightbox="web-art" class="img-responsive img-thumbnail"width="200px"height="200px"</img></li>
-    </div>
-  </ul><!--end of image-list-->
-</div><!--end of gallery-box-->
+<div class=" container gallery" id="gallery">
+  <ul class="slides list-unstyled">
+    <li class="slide img-responsive "><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-about.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-login.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-main.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\portfolio.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\quick-email-design.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone5.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone6plus.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-responsive-small.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-jquery-scroll.PNG"/></li>
+    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-landing.PNG"/></li>
+  </ul><!--end of slides-->
+</div><!--end of gallery-wrapper-->
   <!--  footer section of page with social icons-->
   <div class="container foot-wrapper navbar-fixed-bottom">
     <ul id="social-buttons"class="list-unstyled list-inline text-center">
