--- a/index.html
+++ b/index.html
@@ -39,20 +39,18 @@
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
-<div class=" container gallery" id="gallery">
-  <ul class="slides list-unstyled">
-    <li class="slide img-responsive "><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-about.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-login.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-main.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\portfolio.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\quick-email-design.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone5.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone6plus.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-responsive-small.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-jquery-scroll.PNG"/></li>
-    <li class="slide img-responsive"><img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-landing.PNG"/></li>
-  </ul><!--end of slides-->
+<div class=" container gallery" id="slides">
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-about.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-login.PNG">
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-main.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\portfolio.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\quick-email-design.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone5.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone6plus.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-responsive-small.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
+    <img src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-landing.PNG"/>
 </div><!--end of gallery-wrapper-->
   <!--  footer section of page with social icons-->
   <div class="container foot-wrapper navbar-fixed-bottom">
@@ -82,8 +80,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/lightbox-dist/js/lightbox-plus-jquery.min.js"></script>
     <script src="main.js"></script>
     <script src="assets/gallery.js"></script>
+    <script src="assets/jquery.slides.min.js"></script>
+
   </body>
 </html>
