--- a/index.html
+++ b/index.html
@@ -41,19 +41,18 @@
   </div>
 <div class=" slidesjs-control container slides-wrapper">
   <div id="slides">
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-main.PNG"/>
-    <img class="slidejs-slide img-responsive "src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-about.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\diehl-login.PNG">
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\portfolio.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\quick-email-design.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone5.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-iphone6plus.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\Simple-List-responsive-small.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
-    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\portfolio-pictures\web-artist-landing.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-main.PNG"/>
+    <img class="slidejs-slide img-responsive "src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-about.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG">
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\portfolio.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\quick-email-design.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone5.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone6plus.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-responsive-small.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
+    <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-landing.PNG"/>
   </div><!--end of slides-->
-  
 </div><!--end of slides-wrapper-->
   <!--  footer section of page with social icons-->
   <div class="container foot-wrapper navbar-fixed-bottom">
