change of gallery

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/img/codicon.png">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/lightbox-dist/css/lightbox.min.css">
-
+    <link rel="stylesheet" type="text/css" href="assets/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/slick/slick-theme.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,8 +39,7 @@
         <p class="future"id="future">ARTWORK </p>
     </a>
   </div>
-<div class=" slidesjs-control container slides-wrapper">
-  <div id="slides">
+<div class="slides-wrapper">
     <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-main.PNG"/>
     <img class="slidejs-slide img-responsive "src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-about.PNG"/>
     <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG">
@@ -52,7 +51,6 @@
     <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-responsive-small.PNG"/>
     <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-landing.PNG"/>
     <img class="slidejs-slide img-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
-  </div><!--end of slides-->
 </div><!--end of slides-wrapper-->
   <!--  footer section of page with social icons-->
   <div class="container foot-wrapper navbar-fixed-bottom">
@@ -83,10 +81,10 @@
     <!--  bootstrap-->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <!--  transition/animation JavaScript-->
+    <script src="assets/slick/slick.min.js"></script>
     <script src="main.js"></script>
     <script src="assets/gallery.js"></script>
     <!-- slideshow java script -->
-    <script src="assets/jquery.slides.min.js"></script>
 
   </body>
 </html>
