added slide class

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
     </a>
   </div>
 <div class="slides-wrapper">
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG">
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\portfolio.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\quick-email-design.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone5.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone6plus.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-responsive-small.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-landing.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-main.PNG"/>
-    <img class="image-responsive"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-about.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG">
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\portfolio.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\quick-email-design.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone5.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone6plus.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-landscape-searchbar.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-responsive-small.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-landing.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\web-artist-jquery-scroll.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-main.PNG"/>
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-about.PNG"/>
 </div><!--end of slides-wrapper-->
   <!--  footer section of page with social icons-->
   <div class="container foot-wrapper navbar-fixed-bottom">
