fixed gallery display issues and resized assets

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </a>
   </div>
 <div class="slides-wrapper">
-    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG">
+    <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\diehl-login.PNG"/>
     <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\portfolio.PNG"/>
     <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\quick-email-design.PNG"/>
     <img class="image-responsive slide"src="C:\Users\John\Documents\GitHub\full-page-lander\assets\img\portfolio-pictures\Simple-List-iphone5.PNG"/>
